deploy: 9f346f3409e0c91a1a7206faa4a905c3425eddfe

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "868b374f",
+   "id": "9e4eac3e",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32fb7d59",
+   "id": "18fbc593",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43dade7c",
+   "id": "8bf08731",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e435dd81",
+   "id": "ce3cedf4",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aec7377",
+   "id": "61f31ec3",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e774404b",
+   "id": "ec8cd0ee",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7f747f8a",
+   "id": "113e35f3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:41.772508Z",
-     "iopub.status.busy": "2025-01-27T16:51:41.772335Z",
-     "iopub.status.idle": "2025-01-27T16:51:46.101929Z",
-     "shell.execute_reply": "2025-01-27T16:51:46.101337Z"
+     "iopub.execute_input": "2025-01-27T17:02:12.991409Z",
+     "iopub.status.busy": "2025-01-27T17:02:12.991219Z",
+     "iopub.status.idle": "2025-01-27T17:02:17.362417Z",
+     "shell.execute_reply": "2025-01-27T17:02:17.361803Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de600f08",
+   "id": "fab978d9",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d5d14b7",
+   "id": "ca5535ca",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c84e803",
+   "id": "5653f17d",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "529c5442",
+   "id": "117687d1",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b355ec",
+   "id": "07137067",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff8ede50",
+   "id": "782db5d7",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d15b7cea",
+   "id": "586264ec",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96567734",
+   "id": "400b848f",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "17fda7d0",
+   "id": "ce1f119b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:46.104442Z",
-     "iopub.status.busy": "2025-01-27T16:51:46.103912Z",
-     "iopub.status.idle": "2025-01-27T16:51:48.009269Z",
-     "shell.execute_reply": "2025-01-27T16:51:48.008646Z"
+     "iopub.execute_input": "2025-01-27T17:02:17.364755Z",
+     "iopub.status.busy": "2025-01-27T17:02:17.364482Z",
+     "iopub.status.idle": "2025-01-27T17:02:19.357676Z",
+     "shell.execute_reply": "2025-01-27T17:02:19.357122Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb340f29",
+   "id": "33199af5",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "13007685",
+   "id": "a4bc071a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:48.011264Z",
-     "iopub.status.busy": "2025-01-27T16:51:48.010924Z",
-     "iopub.status.idle": "2025-01-27T16:51:48.014588Z",
-     "shell.execute_reply": "2025-01-27T16:51:48.014123Z"
+     "iopub.execute_input": "2025-01-27T17:02:19.359585Z",
+     "iopub.status.busy": "2025-01-27T17:02:19.359388Z",
+     "iopub.status.idle": "2025-01-27T17:02:19.363104Z",
+     "shell.execute_reply": "2025-01-27T17:02:19.362647Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "618b05b2",
+   "id": "7662f9a2",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39d7fec6",
+   "id": "a1b0a4dc",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19aad2e",
+   "id": "6dabee12",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b899de6",
+   "id": "af56daee",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d1e7d833",
+   "id": "e0450b34",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:48.016335Z",
-     "iopub.status.busy": "2025-01-27T16:51:48.016157Z",
-     "iopub.status.idle": "2025-01-27T16:51:48.062293Z",
-     "shell.execute_reply": "2025-01-27T16:51:48.061715Z"
+     "iopub.execute_input": "2025-01-27T17:02:19.364927Z",
+     "iopub.status.busy": "2025-01-27T17:02:19.364617Z",
+     "iopub.status.idle": "2025-01-27T17:02:19.412299Z",
+     "shell.execute_reply": "2025-01-27T17:02:19.411697Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a1cc859",
+   "id": "144773c3",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b6dbe096",
+   "id": "731383e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:48.064231Z",
-     "iopub.status.busy": "2025-01-27T16:51:48.063896Z",
-     "iopub.status.idle": "2025-01-27T16:51:48.133795Z",
-     "shell.execute_reply": "2025-01-27T16:51:48.133198Z"
+     "iopub.execute_input": "2025-01-27T17:02:19.414130Z",
+     "iopub.status.busy": "2025-01-27T17:02:19.413946Z",
+     "iopub.status.idle": "2025-01-27T17:02:19.484495Z",
+     "shell.execute_reply": "2025-01-27T17:02:19.483824Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2140d7b0",
+   "id": "f7c712ed",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6953b7cc",
+   "id": "784819f8",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ea4b01b6",
+   "id": "4ee67bb5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:48.136079Z",
-     "iopub.status.busy": "2025-01-27T16:51:48.135590Z",
-     "iopub.status.idle": "2025-01-27T16:51:48.165778Z",
-     "shell.execute_reply": "2025-01-27T16:51:48.165297Z"
+     "iopub.execute_input": "2025-01-27T17:02:19.486597Z",
+     "iopub.status.busy": "2025-01-27T17:02:19.486209Z",
+     "iopub.status.idle": "2025-01-27T17:02:19.518769Z",
+     "shell.execute_reply": "2025-01-27T17:02:19.518244Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25115033",
+   "id": "923c84d9",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4187a83a",
+   "id": "dffe54ac",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e9ed313",
+   "id": "b8ff9aac",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99562aea",
+   "id": "799bfd52",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf86eabb",
+   "id": "a11c4889",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "18b427a0",
+   "id": "0edba240",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:48.167648Z",
-     "iopub.status.busy": "2025-01-27T16:51:48.167479Z",
-     "iopub.status.idle": "2025-01-27T16:51:48.171818Z",
-     "shell.execute_reply": "2025-01-27T16:51:48.171175Z"
+     "iopub.execute_input": "2025-01-27T17:02:19.520912Z",
+     "iopub.status.busy": "2025-01-27T17:02:19.520440Z",
+     "iopub.status.idle": "2025-01-27T17:02:19.525098Z",
+     "shell.execute_reply": "2025-01-27T17:02:19.524478Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48de305a",
+   "id": "b1f074bd",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9fee4b5b",
+   "id": "d410f04a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:48.173772Z",
-     "iopub.status.busy": "2025-01-27T16:51:48.173428Z",
-     "iopub.status.idle": "2025-01-27T16:51:48.176425Z",
-     "shell.execute_reply": "2025-01-27T16:51:48.175867Z"
+     "iopub.execute_input": "2025-01-27T17:02:19.526920Z",
+     "iopub.status.busy": "2025-01-27T17:02:19.526535Z",
+     "iopub.status.idle": "2025-01-27T17:02:19.529451Z",
+     "shell.execute_reply": "2025-01-27T17:02:19.528951Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d59abd6b",
+   "id": "6033df8b",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5ff2786f",
+   "id": "f592406b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:48.178106Z",
-     "iopub.status.busy": "2025-01-27T16:51:48.177766Z",
-     "iopub.status.idle": "2025-01-27T16:51:50.770151Z",
-     "shell.execute_reply": "2025-01-27T16:51:50.769547Z"
+     "iopub.execute_input": "2025-01-27T17:02:19.531237Z",
+     "iopub.status.busy": "2025-01-27T17:02:19.530869Z",
+     "iopub.status.idle": "2025-01-27T17:02:22.133114Z",
+     "shell.execute_reply": "2025-01-27T17:02:22.132474Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723d2658",
+   "id": "4198a470",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2765631a",
+   "id": "44d04b23",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bacc1173",
+   "id": "c93a6d2c",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "678423e9",
+   "id": "7955e6ff",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a9836abe",
+   "id": "5ecf15e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:50.772130Z",
-     "iopub.status.busy": "2025-01-27T16:51:50.771939Z",
-     "iopub.status.idle": "2025-01-27T16:51:50.775369Z",
-     "shell.execute_reply": "2025-01-27T16:51:50.774685Z"
+     "iopub.execute_input": "2025-01-27T17:02:22.135241Z",
+     "iopub.status.busy": "2025-01-27T17:02:22.134871Z",
+     "iopub.status.idle": "2025-01-27T17:02:22.138435Z",
+     "shell.execute_reply": "2025-01-27T17:02:22.137853Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6a74285e40>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fa48ed9f560>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "565c7fb7",
+   "id": "c1581e2b",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d33941f",
+   "id": "3af0124d",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c357c557",
+   "id": "1171af13",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afff25ee",
+   "id": "3a0377c2",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c4b15791",
+   "id": "8ffd7511",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:50.777224Z",
-     "iopub.status.busy": "2025-01-27T16:51:50.777046Z",
-     "iopub.status.idle": "2025-01-27T16:51:50.780068Z",
-     "shell.execute_reply": "2025-01-27T16:51:50.779572Z"
+     "iopub.execute_input": "2025-01-27T17:02:22.140362Z",
+     "iopub.status.busy": "2025-01-27T17:02:22.140010Z",
+     "iopub.status.idle": "2025-01-27T17:02:22.142926Z",
+     "shell.execute_reply": "2025-01-27T17:02:22.142394Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "18a300c4",
+   "id": "9def9359",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T16:51:50.781747Z",
-     "iopub.status.busy": "2025-01-27T16:51:50.781400Z",
-     "iopub.status.idle": "2025-01-27T16:51:51.828989Z",
-     "shell.execute_reply": "2025-01-27T16:51:51.828376Z"
+     "iopub.execute_input": "2025-01-27T17:02:22.144796Z",
+     "iopub.status.busy": "2025-01-27T17:02:22.144373Z",
+     "iopub.status.idle": "2025-01-27T17:02:23.193548Z",
+     "shell.execute_reply": "2025-01-27T17:02:23.192998Z"
     }
    },
    "outputs": [
