deploy: 0cf6abca536f5b73186cb58938f745687506d2e9

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e4eac3e",
+   "id": "48935579",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18fbc593",
+   "id": "dc6d3562",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf08731",
+   "id": "f15a5e0e",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce3cedf4",
+   "id": "e71d77c4",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f31ec3",
+   "id": "a16108ee",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8cd0ee",
+   "id": "0eb80e8e",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "113e35f3",
+   "id": "2015cf91",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:12.991409Z",
-     "iopub.status.busy": "2025-01-27T17:02:12.991219Z",
-     "iopub.status.idle": "2025-01-27T17:02:17.362417Z",
-     "shell.execute_reply": "2025-01-27T17:02:17.361803Z"
+     "iopub.execute_input": "2025-01-27T17:10:53.294668Z",
+     "iopub.status.busy": "2025-01-27T17:10:53.294242Z",
+     "iopub.status.idle": "2025-01-27T17:10:57.745135Z",
+     "shell.execute_reply": "2025-01-27T17:10:57.744618Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fab978d9",
+   "id": "8613d304",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca5535ca",
+   "id": "99949547",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5653f17d",
+   "id": "e4895c47",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117687d1",
+   "id": "706600ce",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07137067",
+   "id": "3b3764c9",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "782db5d7",
+   "id": "471e65cf",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "586264ec",
+   "id": "7fbca135",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400b848f",
+   "id": "55130b00",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ce1f119b",
+   "id": "653bc462",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:17.364755Z",
-     "iopub.status.busy": "2025-01-27T17:02:17.364482Z",
-     "iopub.status.idle": "2025-01-27T17:02:19.357676Z",
-     "shell.execute_reply": "2025-01-27T17:02:19.357122Z"
+     "iopub.execute_input": "2025-01-27T17:10:57.747429Z",
+     "iopub.status.busy": "2025-01-27T17:10:57.746966Z",
+     "iopub.status.idle": "2025-01-27T17:10:59.759095Z",
+     "shell.execute_reply": "2025-01-27T17:10:59.758579Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33199af5",
+   "id": "fb9a7ba2",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a4bc071a",
+   "id": "4983f457",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:19.359585Z",
-     "iopub.status.busy": "2025-01-27T17:02:19.359388Z",
-     "iopub.status.idle": "2025-01-27T17:02:19.363104Z",
-     "shell.execute_reply": "2025-01-27T17:02:19.362647Z"
+     "iopub.execute_input": "2025-01-27T17:10:59.761128Z",
+     "iopub.status.busy": "2025-01-27T17:10:59.760777Z",
+     "iopub.status.idle": "2025-01-27T17:10:59.764267Z",
+     "shell.execute_reply": "2025-01-27T17:10:59.763663Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7662f9a2",
+   "id": "38ef8ece",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1b0a4dc",
+   "id": "9e187e60",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dabee12",
+   "id": "5d8a5d70",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af56daee",
+   "id": "0d844a03",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e0450b34",
+   "id": "2a594632",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:19.364927Z",
-     "iopub.status.busy": "2025-01-27T17:02:19.364617Z",
-     "iopub.status.idle": "2025-01-27T17:02:19.412299Z",
-     "shell.execute_reply": "2025-01-27T17:02:19.411697Z"
+     "iopub.execute_input": "2025-01-27T17:10:59.766076Z",
+     "iopub.status.busy": "2025-01-27T17:10:59.765754Z",
+     "iopub.status.idle": "2025-01-27T17:10:59.811882Z",
+     "shell.execute_reply": "2025-01-27T17:10:59.811338Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "144773c3",
+   "id": "9a31a4a0",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "731383e1",
+   "id": "73645713",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:19.414130Z",
-     "iopub.status.busy": "2025-01-27T17:02:19.413946Z",
-     "iopub.status.idle": "2025-01-27T17:02:19.484495Z",
-     "shell.execute_reply": "2025-01-27T17:02:19.483824Z"
+     "iopub.execute_input": "2025-01-27T17:10:59.814126Z",
+     "iopub.status.busy": "2025-01-27T17:10:59.813647Z",
+     "iopub.status.idle": "2025-01-27T17:10:59.884782Z",
+     "shell.execute_reply": "2025-01-27T17:10:59.884221Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7c712ed",
+   "id": "388e6e54",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "784819f8",
+   "id": "1562e367",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4ee67bb5",
+   "id": "05797f4f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:19.486597Z",
-     "iopub.status.busy": "2025-01-27T17:02:19.486209Z",
-     "iopub.status.idle": "2025-01-27T17:02:19.518769Z",
-     "shell.execute_reply": "2025-01-27T17:02:19.518244Z"
+     "iopub.execute_input": "2025-01-27T17:10:59.886799Z",
+     "iopub.status.busy": "2025-01-27T17:10:59.886432Z",
+     "iopub.status.idle": "2025-01-27T17:10:59.917094Z",
+     "shell.execute_reply": "2025-01-27T17:10:59.916554Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "923c84d9",
+   "id": "f988669c",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dffe54ac",
+   "id": "e12277a0",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8ff9aac",
+   "id": "9aad4953",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "799bfd52",
+   "id": "c2b95244",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a11c4889",
+   "id": "980a2607",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0edba240",
+   "id": "9a265109",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:19.520912Z",
-     "iopub.status.busy": "2025-01-27T17:02:19.520440Z",
-     "iopub.status.idle": "2025-01-27T17:02:19.525098Z",
-     "shell.execute_reply": "2025-01-27T17:02:19.524478Z"
+     "iopub.execute_input": "2025-01-27T17:10:59.919235Z",
+     "iopub.status.busy": "2025-01-27T17:10:59.918855Z",
+     "iopub.status.idle": "2025-01-27T17:10:59.923038Z",
+     "shell.execute_reply": "2025-01-27T17:10:59.922391Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f074bd",
+   "id": "f6095a6a",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d410f04a",
+   "id": "75c0ffbe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:19.526920Z",
-     "iopub.status.busy": "2025-01-27T17:02:19.526535Z",
-     "iopub.status.idle": "2025-01-27T17:02:19.529451Z",
-     "shell.execute_reply": "2025-01-27T17:02:19.528951Z"
+     "iopub.execute_input": "2025-01-27T17:10:59.924777Z",
+     "iopub.status.busy": "2025-01-27T17:10:59.924431Z",
+     "iopub.status.idle": "2025-01-27T17:10:59.927372Z",
+     "shell.execute_reply": "2025-01-27T17:10:59.926881Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6033df8b",
+   "id": "2d6287fe",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f592406b",
+   "id": "94e8c4da",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:19.531237Z",
-     "iopub.status.busy": "2025-01-27T17:02:19.530869Z",
-     "iopub.status.idle": "2025-01-27T17:02:22.133114Z",
-     "shell.execute_reply": "2025-01-27T17:02:22.132474Z"
+     "iopub.execute_input": "2025-01-27T17:10:59.929045Z",
+     "iopub.status.busy": "2025-01-27T17:10:59.928717Z",
+     "iopub.status.idle": "2025-01-27T17:11:02.473643Z",
+     "shell.execute_reply": "2025-01-27T17:11:02.473074Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4198a470",
+   "id": "6c464079",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44d04b23",
+   "id": "6e86b175",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c93a6d2c",
+   "id": "190bf9f5",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7955e6ff",
+   "id": "77448dcd",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5ecf15e3",
+   "id": "ae3b1b8b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:22.135241Z",
-     "iopub.status.busy": "2025-01-27T17:02:22.134871Z",
-     "iopub.status.idle": "2025-01-27T17:02:22.138435Z",
-     "shell.execute_reply": "2025-01-27T17:02:22.137853Z"
+     "iopub.execute_input": "2025-01-27T17:11:02.475679Z",
+     "iopub.status.busy": "2025-01-27T17:11:02.475306Z",
+     "iopub.status.idle": "2025-01-27T17:11:02.478622Z",
+     "shell.execute_reply": "2025-01-27T17:11:02.478041Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fa48ed9f560>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f2dc40a7560>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1581e2b",
+   "id": "2b955eb2",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af0124d",
+   "id": "3ba444a7",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1171af13",
+   "id": "efa122ac",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a0377c2",
+   "id": "a211bb4c",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8ffd7511",
+   "id": "2a407a1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:22.140362Z",
-     "iopub.status.busy": "2025-01-27T17:02:22.140010Z",
-     "iopub.status.idle": "2025-01-27T17:02:22.142926Z",
-     "shell.execute_reply": "2025-01-27T17:02:22.142394Z"
+     "iopub.execute_input": "2025-01-27T17:11:02.480609Z",
+     "iopub.status.busy": "2025-01-27T17:11:02.480184Z",
+     "iopub.status.idle": "2025-01-27T17:11:02.483262Z",
+     "shell.execute_reply": "2025-01-27T17:11:02.482756Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9def9359",
+   "id": "b5f214a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:02:22.144796Z",
-     "iopub.status.busy": "2025-01-27T17:02:22.144373Z",
-     "iopub.status.idle": "2025-01-27T17:02:23.193548Z",
-     "shell.execute_reply": "2025-01-27T17:02:23.192998Z"
+     "iopub.execute_input": "2025-01-27T17:11:02.485044Z",
+     "iopub.status.busy": "2025-01-27T17:11:02.484703Z",
+     "iopub.status.idle": "2025-01-27T17:11:03.531672Z",
+     "shell.execute_reply": "2025-01-27T17:11:03.531118Z"
     }
    },
    "outputs": [
